--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="{% static 'dist/styles.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <!-- Flatpickr CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+        <!-- Flatpickr JS -->
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		{% tailwind_css %}
     </head>
     <body class="bg-atb-g-50 min-h-screen w-full" >
