--- a/b_requests/templates/b_requests/borrow_request_detail.html
+++ b/b_requests/templates/b_requests/borrow_request_detail.html
@@ -21,10 +21,10 @@
   <form method="post">
     {% csrf_token %}
     {% if not request_obj.approved %}
-      <button name="approve" type="submit" class="bg-atb-s-500 hover:bg-atb-s-400 text-white px-4 py-2 rounded mr-4">
+      <button name="approve" type="submit" class="bg-atb-s-500 hover:bg-atb-s-400 text-white px-4 py-2 rounded-[8px] mr-4">
         Approve
       </button>
-      <button name="reject" type="submit" class="bg-atb-e-500 hover:bg-atb-e-400 text-white px-4 py-2 rounded">
+      <button name="reject" type="submit" class="bg-atb-e-500 hover:bg-atb-e-400 text-white px-4 py-2 rounded-[8px]">
         Reject
       </button>
     {% else %}
