--- a/devices/templates/devices/device_detail.html
+++ b/devices/templates/devices/device_detail.html
@@ -32,7 +32,7 @@
         </div>
 
 
-        <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mt-6 gap-4 sm:gap-4 ">
+        <div class="flex flex-col md:justify-end sm:flex-row sm:justify-between sm:items-center mt-6 gap-4 sm:gap-4 ">
             <!-- Back to List Button -->
             <a href="{% url 'devices:device-list' %}"
                class="w-full sm:w-fit text-center whitespace-nowrap 
