Adding filter and sorting to the device list

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -12,7 +12,7 @@
     --color-atb-p-200: #D58099;
     --color-atb-p-300: #D6BBFB;
     --color-atb-p-400: #B692F6;
-    --color-atb-p-500: #9E77ED;
+    --color-atb-p-500: #AC0033;
     --color-atb-p-600: #8F002B;
     --color-atb-p-700: #730022;
   
