--- a/templates/sort-filter/filter.html
+++ b/templates/sort-filter/filter.html
@@ -1,13 +1,30 @@
 {% load static %}
 <div class="flex flex-col gap-4 ">
 <div class="flex flex-row gap-4 justify-start items-center border-red-500">
-<h3 class="text-[18px]  font-[600] text-atb-g-900 grow font-primary">Filter</h3>
+<h3 class="text-[18px]  font-[600] text-atb-g-900 grow font-primary">Filters</h3>
 <button class="flex items-center justify-center p-1.5 rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
     hover:bg-atb-g-50
     focus:ring-atb-p-200
     focus:bg-white focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]
     disabled:bg-atb-g-50 disabled:text-atb-g-300 disabled:border-atb-g-200 disabled:opacity-70"
     onclick="resetFilters()">
-    <img id="sort-down" src="{% static 'assets/icons/funnel-reset.svg' %}" class="h-6 w-6" alt="Sort Down">
+    <img id="reset-filter" src="{% static 'assets/icons/funnel-reset.svg' %}" class="h-6 w-6" alt="Reset Filter">
 </button>
 </div>
+
+  <!-- Filter Content -->
+  {% block filter_content %}{% endblock %}
+</div>
+
+<script>
+function toggleFilterBox(type, prefix='') {
+    const filterDiv = document.querySelector(`.${prefix}${type}-filter`);
+    const arrowUp = document.getElementById(`.${prefix}${type}-arrow-up`);
+    const arrowDown = document.getElementById(`.${prefix}${type}-arrow-down`);
+    if (filterDiv) {
+        filterDiv.classList.toggle('hidden');
+        arrowUp.classList.toggle('hidden');
+        arrowDown.classList.toggle('hidden');
+    }
+}
+</script>
