--- a/templates/sort-filter/filters/statusfilter.html
+++ b/templates/sort-filter/filters/statusfilter.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="flex flex-col justify-center gap-4">
-        <button class="flex flex-row items-center px-2" type="button" onclick="toggleStatusFilterBox()">
+        <button class="flex flex-row items-center px-2" type="button" onclick="toggleFilterBox('status')">
         <p class="text-[16px] text-atb-g-700 grow text-left">Status</p>
         <img id="stat-arrow-down" src="{% static 'assets/icons/arrow-down.svg' %}" class="h-6 w-6" alt="Arrow Down">
         <img id="stat-arrow-up" src="{% static 'assets/icons/arrow-up.svg' %}" class="h-6 w-6 hidden" alt="Arrow Up">
@@ -18,17 +18,3 @@
     {% endfor %}
     </div>
 </div>
-
-<script>
-function toggleStatusFilterBox() {
-    const filterDiv = document.querySelector('.status-filter');
-    const arrowUp = document.getElementById('stat-arrow-up');
-    const arrowDown = document.getElementById('stat-arrow-down');
-    if (filterDiv) {
-        filterDiv.classList.toggle('hidden');
-        arrowUp.classList.toggle('hidden');
-        arrowDown.classList.toggle('hidden');
-    }
-}
-</script>
-
