--- a/templates/sort-filter/sort.html
+++ b/templates/sort-filter/sort.html
@@ -5,8 +5,14 @@
 
     <select onchange="toggleSorting(this.value, false)" 
             class="w-1/2 grow py-2 pr-8 pl-4 rounded-[8px] bg-white text-[16px] text-atb-g-900 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]">
+        {% if '/devices/' in request.path %}
         <option value="name" selected>Alphabet</option>
         <option value="id">Date of creation</option>
+        {% elif '/requests/' in request.path %}
+        <option value="name" selected>Alphabet</option>
+        <option value="BD" selected>Borrow Date</option>
+        <option value="RD" selected>Return Date</option>
+        {% endif%}
     </select>
 
 
