adding review to request
adding review with 'approved', 'pending', 'rejected' instead of approved = true

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -33,7 +33,7 @@
            focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]
            disabled:bg-atb-g-50 disabled:text-atb-g-300 disabled:border-atb-g-200 disabled:opacity-70"
                 onclick="showTab('borrow')">
-                Borrow Requests
+                Borrows
             </button>
             <button id="device-tab"
                 class="tab-button px-12 py-2 text-[18px] font-semibold rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
@@ -49,7 +49,7 @@
            focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]
            disabled:bg-atb-g-50 disabled:text-atb-g-300 disabled:border-atb-g-200 disabled:opacity-70"
                 onclick="showTab('return')">
-                Return Requests
+                Returns
             </button>
         </div>
 
