--- a/templates/sort-filter/filters/conditionfilter.html
+++ b/templates/sort-filter/filters/conditionfilter.html
@@ -12,7 +12,7 @@
                     duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
                     hover:bg-atb-g-50 hover:text-atb-g-800 "
             id ="{{ condition }}-condition-tab"
-            onclick="toggleStatusFilter('{{ condition }}')">
+            onclick="toggleConditionFilter('{{ condition }}')">
             {{ condition }}
     </button>
     {% endfor %}
