--- a/templates/sort-filter/borrow_filter.html
+++ b/templates/sort-filter/borrow_filter.html
@@ -1,5 +1,5 @@
 {% include 'sort-filter/filter.html' %}
 {% block filter_content %}
+  {% include 'sort-filter/filters/typefilter.html' with types=btypes prefix='borrow' %}
   {% include 'sort-filter/filters/reviewfilter.html' with reviews=breviews prefix='borrow' %}
-  {% include 'sort-filter/filters/statusfilter.html' %}
 {% endblock %}
