--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -68,9 +68,9 @@
             {% endif %}
             <span class="text-atb-g-700 font-semibold">Last name:</span><br>
             {% if user.last_name %}
-            <input type="text" value="{{ user.last_name}}"  id="username" name="username" class="w-full p-2 mb-4 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300   focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200" disabled><br>
+            <input type="text" value="{{ user.last_name}}"  id="username" name="username" class="w-1/2 p-2 mb-4 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300   focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200" disabled><br>
             {% else %}
-            <input type="text" value="Not Specified"  id="username" name="username" class="w-full p-2 mb-4 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300   focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200" disabled><br>
+            <input type="text" value="Not Specified"  id="username" name="username" class="w-1/2 p-2 mb-4 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300   focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200" disabled><br>
             {% endif %}
         </p>
         </div>
