--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -51,6 +51,22 @@
                 onclick="showTab('return')">
                 Returns
             </button>
+
+
+
+            <div id="device-filter" class="flex flex-col gap-2 hidden">
+                {% include 'sort-filter/sort.html' %}
+                {% include 'sort-filter/device_filter.html' %}
+            </div>
+
+            <div id="borrow-filter" class="flex flex-col gap-2 hidden">
+                {% include 'sort-filter/borrow_filter.html' %}
+            </div>
+
+            <div id="return-filter" class="flex flex-col gap-2 hidden">
+                {% include 'sort-filter/return_filter.html' %}
+            </div> 
+
         </div>
 
 
@@ -82,27 +98,25 @@
             <h3 class="text-2xl font-semibold mb-4">Your Borrow Request History :</h3>
             <div class="flex flex-col space-y-4">
             {% for req in borrows %}
-            <a href="#"  class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8">
-                <div class="flex justify-start mt-2">
-                    {% if req.approved %}
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                        </svg>
-                        <!--
-                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-s-500 bg-atb-s-200 rounded-lg">
-                            Approved
-                        </span>
-                        -->
+            <a href="#"  class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8"
+                    data-review='{{ instance.review }}' 
+                    data-request-type='borrow'
+                    data-device-type='{{ instance.device.type }}'>
+                    <div class="flex justify-start mt-2 ">
+                        {% if req.review == 'approved' %}
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
+                    {% elif req.review == 'pending' %}
+
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
                     {% else %}
 
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                        </svg>
-                        <!--
-                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-w-500 bg-atb-w-200 rounded-lg">
-                            Verifying
-                        </span>
-                        -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-e-500">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
                     {% endif %}
                     </div>
                     <div class="text-left">
@@ -123,7 +137,14 @@
             <h3 class="text-2xl font-semibold mb-4">Your borrowed devices:</h3>
             <div class="flex flex-col space-y-4">
             {% for instance in approves %}
-            <a href="{% url 'devices:device-detail' instance.device.id %}" class="block bg-atb-g-50 rounded-[12px] p-8 hover:bg-atb-g-200 focus:border-none focus:ring-0 focus:shadow-[0_0_0_4px_#F2F4F7] transition duration-300">
+            <a href="{% url 'devices:device-detail' instance.device.id %}" 
+                class="block bg-atb-g-50 rounded-[12px] p-8 hover:bg-atb-g-200
+                focus:border-none focus:ring-0 focus:shadow-[0_0_0_4px_#F2F4F7]
+                transition duration-300"
+                data-type="{{ instance.type }}"
+                data-status="{{ instance.status }}"
+                data-name="{{ instance.name|lower }}" 
+                data-id="{{ instance.id }}">
                 <h3 class="text-xl font-semibold text-[#334155]">{{ instance.device.name }}</h3>
                 <p class="text-[#475569]">
                     {{ instance.device.type }}<br> Borrowed on {{ instance.date_requested }} &bull; Return by {{ instance.return_date }}
@@ -142,29 +163,28 @@
             <h3 class="text-2xl font-semibold mb-4">Your Return Request History :</h3> 
             <div class="flex flex-col space-y-4">
             {% for req in returns %}
-            <a href="#" class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8 ">
-                <div class="flex justify-start mt-2">
-                    {% if req.approved %}
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                        </svg>
-                        <!--
-                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-s-500 bg-atb-s-200 rounded-lg">
-                            Approved
-                        </span>
-                        -->
+            <a href="#" class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8 "
+                             data-review="{{ instance.review }}"
+                             data-request-type="return"
+                             data-condition="{{ instance.condition }}"
+                             data-device-type="{{ instance.device.type }}">
+                    <div class="flex justify-start mt-2 ">
+                        {% if req.review == 'approved' %}
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
+                    {% elif req.review == 'pending' %}
+
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
                     {% else %}
 
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                        </svg>
-                        <!--
-                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-w-500 bg-atb-w-200 rounded-lg">
-                            Verifying
-                        </span>
-                        -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-e-500">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
                     {% endif %}
-                </div>
+                    </div>
                 <div>
                 <h3 class="text-xl font-semibold text-[#334155]">{{ req }}</h3>
                 <p class="text-[#475569]">Condition : {{ req.condition }} &bull; Feedback : {{ req.feedback|slice:":20" }}</p>
@@ -178,32 +198,48 @@
     </div>
 </div>
 
+
+
+{{ breviews|json_script:"b-request-review" }}
+{{ rreviews|json_script:"r-request-review" }}
+{{ btypes|json_script:"b-request-type" }}
+{{ rtypes|json_script:"r-request-type" }}
+{{ types|json_script:"device-type" }}
+{{ conditions|json_script:"r-request-condition" }}
 <script>
+const bRequestReview = JSON.parse(document.getElementById('b-request-review').textContent);
+const rRequestReview = JSON.parse(document.getElementById('r-request-review').textContent);
+const bRequestType = JSON.parse(document.getElementById('b-request-type').textContent);
+const rRequestType = JSON.parse(document.getElementById('r-request-type').textContent);
+const rRequestCondition = JSON.parse(document.getElementById('r-request-condition').textContent);
+
+document.addEventListener('DOMContentLoaded', function () {
+    showTab('user');
+});
 
 
-    document.addEventListener('DOMContentLoaded', function () {
-        showTab('user');
-    });
-    function showTab(selectedTab) {
-        var tabs = ['user','borrow', 'device', 'return'];
+function showTab(selectedTab) {
+    var tabs = ['user', 'borrow', 'device', 'return'];
 
-        for (var i = 0; i < tabs.length; i++) 
-        {
-            var tab = tabs[i];
+    for (var i = 0; i < tabs.length; i++) {
+        var tab = tabs[i];
 
-            var button = document.getElementById(tab + '-tab');
-            var section = document.getElementById(tab + '-section');
+        var btn = document.getElementById(tab + '-tab');
+        var section = document.getElementById(tab + '-section');
+        var filter = document.getElementById(tab + '-filter');
 
-            if (tab === selectedTab) 
-            {
-                section.classList.remove('hidden');
-                button.disabled = true; 
-            } else {
-                section.classList.add('hidden');
-                button.disabled = false; 
-            }
+        if (tab === selectedTab) {
+            section.classList.remove('hidden');
+            if (filter) filter.classList.remove('hidden');
+            btn.disabled = true;
+        } else {
+            section.classList.add('hidden');
+            if (filter) filter.classList.add('hidden');
+            btn.disabled = false;
         }
     }
+}
+
 </script>
 
 {% endblock content %}
