fix profile filter

--- a/templates/sort-filter/device_filter.html
+++ b/templates/sort-filter/device_filter.html
@@ -1,5 +1,7 @@
 {% include 'sort-filter/filter.html' %}
 {% block filter_content %}
   {% include 'sort-filter/filters/typefilter.html' with prefix='device' %}
+  {% if not '/accounts/profile/' in request.path %}
   {% include 'sort-filter/filters/statusfilter.html' %}
+  {% endif %}
 {% endblock %}
