--- a/templates/sort-filter/sort.html
+++ b/templates/sort-filter/sort.html
@@ -12,6 +12,8 @@
         <option value="name" selected>Alphabet</option>
         <option value="BD" selected>Borrow Date</option>
         <option value="RD" selected>Return Date</option>
+        {% else %}
+        <option>hello world</option>
         {% endif%}
     </select>
 
