--- a/templates/sort-filter/sort.html
+++ b/templates/sort-filter/sort.html
@@ -3,22 +3,10 @@
 
     <h3 class="text-[18px]  font-[600] text-atb-g-900 font-primary">Sort by</h3>
 
-    <select onchange="toggleSorting(this.value, false)" 
-            class="w-1/2 grow py-2 pr-8 pl-4 rounded-[8px] bg-white text-[16px] text-atb-g-900 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]">
-        {% if '/devices/' in request.path %}
-        <option value="name" selected>Alphabet</option>
-        <option value="id">Date of creation</option>
-        {% elif '/requests/' in request.path %}
-        <option value="name" selected>Alphabet</option>
-        <option value="BD" selected>Borrow Date</option>
-        <option value="RD" selected>Return Date</option>
-        {% else %}
-        <option>hello world</option>
-        {% endif%}
-    </select>
+    {% block sort_content %}{% endblock %}
 
 
-    <button class="flex items-center justify-center p-1.5 rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
+    <button class="flex min-w-8 items-center justify-center p-1.5 rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
         hover:bg-atb-g-50
         focus:ring-atb-p-200
         focus:bg-white focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]
@@ -28,3 +16,4 @@
         <img id="sort-up" src="{% static 'assets/icons/sort-up.svg' %}" class="h-6 w-6 hidden" alt="Sort Up">
     </button>
 </div>
+
