--- a/theme/templates/nav-bar.html
+++ b/theme/templates/nav-bar.html
@@ -1,12 +1,18 @@
 {% load static %}
-{% if request.user_agent.is_mobile %}
-<nav class="bg-white py-4 min-h-[56px] border-b border-atb-g-200 w-full">
-  <div class="flex justify-between items-center px-4 px-2">
-      <img class="w-16" src="{% static "assets/icons/Arab_Tunisian_Bank_logo.gif" %}" alt="ATB Logo">
-    <button onclick="myFunction()" class="text-atb-g-600 focus:outline-none">
-    <img src="{% static 'assets/icons/menu.svg' %}" alt="Menu Icon" class="w-6 h-6">
-    </button>
-  </div>
+
+<nav class="bg-white py-4 min-h-[56px] border-b border-atb-g-200 w-full md:hidden">
+
+    <div class="flex items-center px-4">
+      <!-- Logo (left) -->
+      <img class="w-16" src="{% static 'assets/icons/Arab_Tunisian_Bank_logo.gif' %}" alt="ATB Logo">
+
+      <!-- Growing button (right side, large click area) -->
+      <button onclick="myFunction()" 
+              class="flex-grow flex justify-end items-center pr-4 py-2 text-atb-g-600 focus:outline-none border rounded-md">
+        <img src="{% static 'assets/icons/menu.svg' %}" alt="Menu Icon" class="w-6 h-6">
+      </button>
+    </div>
+
 
   <ul id="myLinks" class="hidden flex flex-col gap-6 px-4 mt-4 text-atb-g-600 font-primary text-lg font-semibold">
     {% if request.user.is_authenticated and not request.user.is_superuser %}
@@ -25,41 +31,38 @@
   </ul>
 </nav>
 
+
+<nav class="bg-white py-4 min-h-[56px] border-b border-atb-g-200 w-full hidden md:block">
+  <ul class="flex justify-between items-center px-4 md:px-12 lg:px-32 space-x-6 font-primary text-[16px] sm:text-[16px] md:text-[18px] font-semibold">
+    <!-- Left side -->
+    <div class="flex items-center text-atb-g-600 gap-8">
+      <img class="w-16" src="{% static 'assets/icons/Arab_Tunisian_Bank_logo.gif' %}" alt="ATB Logo">
+
+      {% if request.user.is_authenticated and not request.user.is_superuser %}
+        {% include 'nav-items/user.html' %}
+      {% endif %}
+
+      {% if request.user.is_superuser %}
+        {% include 'nav-items/admin.html' %}
+      {% endif %}
+    </div>
+
+    <!-- Right side -->
+    <div class="flex items-center text-atb-g-600 gap-8">
+      {% if request.user.is_authenticated %}
+        <li class="hover:text-[#a60000]">
+          <a href="/accounts/log_out/">Logout</a>
+        </li>
+      {% else %}
+        {% include 'nav-items/guest.html' %}
+      {% endif %}
+    </div>
+  </ul>
+</nav>
+
 <script>
   function myFunction() {
     const menu = document.getElementById("myLinks");
     menu.classList.toggle("hidden");
   }
 </script>
-
-{% else %}
-
-<nav class="bg-white py-4 min-h-[56px] border-b-1 border-atb-g-200 w-full">
-<ul class="flex justify-between items-center px-4 sm:px-2 md:px-16 space-x-6 font-primary text-[16px] sm:text-[16px] md:text-[18px] font-semibold">
-    <!-- Left side -->
-    <div class="flex items-center text-atb-g-600 gap-8">
-        <img class="w-16" src="{% static "assets/icons/Arab_Tunisian_Bank_logo.gif" %}" alt="ATB Logo">
-
-        {% if request.user.is_authenticated and not request.user.is_superuser %}
-            {% include 'nav-items/user.html'%}
-        {% endif %}
-            
-        {% if request.user.is_superuser %}
-            {% include 'nav-items/admin.html'%} 
-        {% endif %}
-    </div>
-
-    <!-- Right side -->
-    <div class="flex items-center text-atb-g-600 gap-8">
-        {% if request.user.is_authenticated %}
-        <li class="hover:text-[#a60000]">
-          <a href="/accounts/log_out/">Logout</a>
-        </li>
-        {% else %}
-            {% include 'nav-items/guest.html'%} 
-        {% endif %}
-    </div>
-</ul>
-</nav>
-
-{% endif %}
